<resources>
    <string name="app_name">TamiGo</string>
    <string name="enter_name">Введіть ім\'я вашого Tami</string>
    <string name="start">Старт</string>
    <string name="slash">/</string>
    <string name="targets">цілі</string>
    <string name="your_current_target">Ваша поточна мета</string>
    <string name="info">Інформація</string>
    <string name="restart">Перезапуск</string>
    <string name="home">Головна</string>
    <string name="shop">Магазин</string>
    <string name="prize">Приз:</string>
    <string name="get">Отримати</string>
    <string name="number_of_steps">Кількість кроків: </string>
    <string name="choose">Обрати</string>
    <string name="are_you_agree">Ви впевнені?</string>
    <string name="warning">Попередні данні будуть втрачені.</string>
    <string name="agree">Погодитися</string>
    <string name="cancel">Відхілити</string>
    <string name="inventory">Інвентар</string>
    <string name="developer">Розробник: Рудь Орина Костянтинівна\nДизайнер: Рудь Орина Костянтинівна\nВерсія додатку: 1</string>
    <string name="not_enough_money">Не достатньо коштів</string>
</resources>
