<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            app:showAsAction="withText|ifRoom" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="withText|ifRoom" />

        <item
            android:id="@+id/info"
            android:title="@string/info"
            app:showAsAction="withText|ifRoom" />

        <item
            android:id="@+id/restart"
            android:title="@string/restart"
            app:showAsAction="withText|ifRoom" />
    </group>
</menu>