<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <TextView
        android:id="@+id/txt_number_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_steps"
        android:textColor="@color/oxford_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/prize"
        android:textColor="@color/oxford_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number_steps" />

    <TextView
        android:id="@+id/number_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/oxford_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txt_number_steps"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10000" />

    <TextView
        android:id="@+id/prize_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:textColor="@color/oxford_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_prize"
        app:layout_constraintStart_toEndOf="@+id/txt_prize"
        app:layout_constraintTop_toTopOf="@+id/txt_prize"
        tools:text="10 000" />

    <ImageView
        android:id="@+id/ic_coin"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ui_coin"
        app:layout_constraintBottom_toBottomOf="@+id/txt_prize"
        app:layout_constraintStart_toEndOf="@+id/prize_coins"
        app:layout_constraintTop_toTopOf="@+id/txt_prize"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>