<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background_border_pink"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_current_target"
        android:textColor="@color/oxford_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_current_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:textColor="@color/oxford_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        tools:text="5000" />

    <TextView
        android:id="@+id/txt_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:text="@string/slash"
        android:textColor="@color/oxford_blue"
        app:layout_constraintBottom_toBottomOf="@+id/txt_current_steps"
        app:layout_constraintStart_toEndOf="@id/txt_current_steps"
        app:layout_constraintTop_toTopOf="@id/txt_current_steps" />

    <TextView
        android:id="@+id/txt_target_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:textColor="@color/oxford_blue"
        app:layout_constraintBottom_toBottomOf="@+id/txt_slash"
        app:layout_constraintStart_toEndOf="@id/txt_slash"
        app:layout_constraintTop_toTopOf="@id/txt_slash"
        tools:text="10000" />

    <Button
        android:id="@+id/btn_getPrize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_target"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginVertical="10dp"
        android:max="100"
        android:min="0"
        android:progressDrawable="@drawable/progress_target"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_current_steps" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/targets_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_target"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="8"
        tools:listitem="@layout/item_targets" />

</androidx.constraintlayout.widget.ConstraintLayout>