<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/oxford_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TamiGo" />

    <ImageView
        android:id="@+id/image_coin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ui_coin"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/oxford_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9999" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="6dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <ImageView
        android:id="@+id/skin"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="ContentDescription"
        tools:src="@drawable/tami_blue" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skin" />

    <ImageView
        android:id="@+id/ic_health"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/ui_heart"
        app:layout_constraintBottom_toBottomOf="@+id/progress_health"
        app:layout_constraintEnd_toStartOf="@+id/progress_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progress_health"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progress_health"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:layout_margin="20dp"
        android:max="100"
        android:min="0"
        android:progressDrawable="@drawable/progress_health"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_health"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_challenge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/ui_background_border_pink"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_health">

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_current_target"
            android:textColor="@color/oxford_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_current_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:textColor="@color/oxford_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_description"
            tools:text="5000" />

        <TextView
            android:id="@+id/txt_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="@string/slash"
            android:textColor="@color/oxford_blue"
            app:layout_constraintBottom_toBottomOf="@+id/txt_current_steps"
            app:layout_constraintStart_toEndOf="@id/txt_current_steps"
            app:layout_constraintTop_toTopOf="@id/txt_current_steps" />

        <TextView
            android:id="@+id/txt_target_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/oxford_blue"
            app:layout_constraintBottom_toBottomOf="@+id/txt_slash"
            app:layout_constraintStart_toEndOf="@id/txt_slash"
            app:layout_constraintTop_toTopOf="@id/txt_slash"
            tools:text="10000" />

        <ProgressBar
            android:id="@+id/progress_target"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginVertical="10dp"
            android:max="100"
            android:min="0"
            android:progressDrawable="@drawable/progress_target"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_current_steps" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:text="@string/targets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
